# rig

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-run  k8s.yaml
config/: api.json  application.yaml
rig/: Cargo.toml
rig/src/: error.rs  lib.rs
rig/src/api/: mod.rs
rig/src/config/: settings.rs
rig/src/handler/: filters.rs  filters_factory.rs  filters_test.rs  handler_provider.rs  handlers.rs  handlers_factory.rs  handlers_tests.rs  mod.rs  router.rs
rig/src/http/: path.rs
rig/src/server/: server.rs
rig/test/: api.json
src/: main.rs
